benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe027_power.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe027_power.oepc.yml/safe027_power.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe027_power.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c
Compilation started
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c: In function ‘P0’:
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c:588:19: error: ‘FALSE’ undeclared (first use in this function)
  588 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c:588:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c: In function ‘P2’:
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c:640:19: error: ‘FALSE’ undeclared (first use in this function)
  640 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c: In function ‘main’:
/tmp/BenchExec_run_gt5winu2/tmp/tmps0d5rc8z.c:733:19: error: ‘TRUE’ undeclared (first use in this function)
  733 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
